--- a/common/macros.tex
+++ b/common/macros.tex
@@ -174,6 +174,7 @@
 \stepcounter{problem}
 \setcounter{section}{\value{problem}}
 \setcounter{figure}{0}
+\setcounter{equation}{0}
 \vspace{.2cm} \noindent {\center  \textbf{\\ Problem \arabic{problem}.\\}} {\noindent}~%
 }{%
 % \vspace{.2cm}%
@@ -326,6 +327,8 @@
 \newtheorem{prop}[equation]{Proposition}
 \newtheorem{corollary}[equation]{Corollary}
 \newtheorem{cor}[equation]{Corollary}
+\newtheorem{claim}[equation]{Claim}
+\newtheorem{observation}[equation]{Observation}
 
 \theoremstyle{definition}
 \newtheorem{definition}[equation]{Definition}
