--- a/hw2/p3.tex
+++ b/hw2/p3.tex
@@ -149,7 +149,7 @@
         \delta^* : Q \times \Sigma^* &\to Q \\
         \delta^*(q, x) &= \begin{cases}
           q &\text{ if $x = \eps$. }\\
-          \delta^*(\delta(q, s), t) &\text{ otherwise, where $q = st, s \in \Sigma, t \in \Sigma^*$. } \\
+          \delta^*(\delta(q, s), t) &\text{ otherwise, where $x = st, s \in \Sigma, t \in \Sigma^*$. } \\
         \end{cases}
       \end{align*}
       Then $M$ must differentiate between six distinct strings as follows:
