--- a/hw1/main.tex
+++ b/hw1/main.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt]{amsart}
 
 % Include the macros file from `../common'
-\input{../common/macros.tex}
+\input{~/latex-common/macros.tex}
 
 \renewcommand{\theenumi}{\alph{enumi}}
 
