--- a/hw2/cover.tex
+++ b/hw2/cover.tex
@@ -1,7 +1,8 @@
 
 
 % TITLE
-\PSET{2 --- \today}{Winter `23}{Chakrabarti}{Amittai Siavava}{CS 39: Theory of Computation}
+\newdate{due-date}{23}{01}{2023}
+\PSET{2 --- \displaydate{due-date}}{Winter `23}{Chakrabarti}{Amittai Siavava}{CS 39: Theory of Computation}
 
 %CREDIT STATEMENT
 \CreditStatement{
