--- a/hw2/p3.tex
+++ b/hw2/p3.tex
@@ -157,7 +157,7 @@
       \begin{table}[h!]
         \begin{tabular}{l c c c c}
           \bottomrule
-          $s$ & $\delta^*(q_0, s)$ & $\delta^*(q0, sa)$ & $\delta(q_0, sb)$ & $\delta^*(q_0, sab)$ \\
+          $s$ & $\delta^*(q_0, s)$ & $\delta^*(q_0, sa)$ & $\delta(q_0, sb)$ & $\delta^*(q_0, sab)$ \\
           \midrule
           $a$ & \crim{rejecting} & \crim{rejecting} & \green{accepting} & \green{accepting} \\
           \midrule
