--- a/paper-template/main.tex
+++ b/paper-template/main.tex
@@ -3,7 +3,7 @@
 \date{\Large{\today}}
 \documentclass[11pt, reqno]{amsart}
 
-\input{../common/macros.tex}
+\input{~/latex-common/macros.tex}
 \usepackage[backend=bibtex,style=science]{biblatex}
 \bibliography{main.bib}
 \pgfplotsset{compat=1.18}
@@ -16,9 +16,6 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
-
-\newcounter{problem}
-\setcounter{problem}{0}
 
 \renewcommand{\theenumi}{\alph{enumi}}
 
