--- a/hw1/cover.tex
+++ b/hw1/cover.tex
@@ -1,7 +1,8 @@
 
 
 % TITLE
-\PSET{1 --- \today}{Winter `23}{Chakrabarti}{Amittai Siavava}{CS 39: Theory of Computation}
+\newdate{due-date}{16}{01}{2023}
+\PSET{1 --- \displaydate{due-date}}{Winter `23}{Chakrabarti}{Amittai Siavava}{CS 39: Theory of Computation}
 
 %CREDIT STATEMENT
 \CreditStatement{
